; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/mockfs/extr_mockfs_vnops.c_mockfs_reclaim.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/mockfs/extr_mockfs_vnops.c_mockfs_reclaim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_reclaim_args = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mockfs_reclaim(%struct.vnop_reclaim_args* %0) #0 {
  %2 = alloca %struct.vnop_reclaim_args*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.vnop_reclaim_args* %0, %struct.vnop_reclaim_args** %2, align 8
  %6 = load %struct.vnop_reclaim_args*, %struct.vnop_reclaim_args** %2, align 8
  %7 = getelementptr inbounds %struct.vnop_reclaim_args, %struct.vnop_reclaim_args* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @vnode_fsnode(i32 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @mockfs_fsnode_drop_vnode(i64 %11)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i64 @vnode_fsnode(i32) #1

declare dso_local i32 @mockfs_fsnode_drop_vnode(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
